--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
         "autoflush",
+        "Caffe",
         "danceshall",
         "easyshiftsdb",
         "filess",
+        "GERD",
         "miano",
         "mydb",
+        "recived",
         "sessionmaker",
         "usersnames"
     ]
