--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,18 @@
 {
     "cSpell.words": [
+        "artifactregistry",
         "autoflush",
         "Caffe",
         "danceshall",
         "dotenv",
+        "easyshifts",
         "easyshiftsdb",
         "filess",
         "GERD",
         "googleusercontent",
         "httplib",
         "idinfo",
+        "LASTEXITCODE",
         "miano",
         "mydb",
         "onupdate",
