--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -33,8 +33,8 @@ ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=30s --start-period=60s --retries=3 \
     CMD python -c "import socket; s=socket.socket(); s.connect(('localhost', 8080)); s.close()" || exit 1
 
-# Run the application
-CMD ["python", "Server.py"]
+# Run the application with better error handling
+CMD ["python", "-u", "Server.py"]
