--- a/app/.env
+++ b/app/.env
@@ -5,5 +5,7 @@
 REACT_APP_GOOGLE_CLIENT_ID=794306818447-4prnpg1p13a4smvnnfs7tfvkesrld9ms.apps.googleusercontent.com
 
 # Development Settings (API URL will be set at runtime)
-# REACT_APP_API_URL=ws://localhost:8080
+# For local development: ws://localhost:8080
+# For production: wss://easyshifts-backend-794306818447.us-central1.run.app
+REACT_APP_API_URL=wss://easyshifts-backend-794306818447.us-central1.run.app
 REACT_APP_ENV=development
