--- a/app/.env
+++ b/app/.env
@@ -7,5 +7,5 @@ REACT_APP_GOOGLE_CLIENT_ID=794306818447-4prnpg1p13a4smvnnfs7tfvkesrld9ms.apps.go
 # Development Settings (API URL will be set at runtime)
 # For local development: ws://localhost:8083
 # For production: wss://easyshifts-backend-794306818447.us-central1.run.app
-REACT_APP_API_URL=ws://localhost:8083
-REACT_APP_ENV=development
+REACT_APP_API_URL=wss://easyshifts-backend-794306818447.us-central1.run.app
+REACT_APP_ENV=production
