--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "update": "^0.7.4",
+    "upgrade": "^1.1.0",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34"
   },
